# gkk-backend-graphql

./: .gitignore  Pipfile  README.md  exampleMutations.md  exampleQueries.md  menuInProducerCode.py  setup.cfg
.github/workflows/: build-app.yml
app/: main.py
app/models/: activeOrder.py  address.py  consumer.py  foodItem.py  orderedFoodItem.py  producer.py  reviewForConsumer.py  reviewForFoodItem.py  reviewForProducer.py
app/schema/: activeOrder.py  address.py  consumer.py  foodItem.py  mutation.py  orderedFoodItem.py  producer.py  query.py  reviewForConsumer.py  reviewForFoodItem.py  reviewForProducer.py  reviewsForConsumer.py  reviewsForFoodItem.py  reviewsForProducer.py  rootMutation.py  rootQuery.py
src/app/models/: activeOrder.py  orderedFoodItem.py
src/app/schema/: producer.py  reviewForProducer.py
src/tests/: test_main.py
tests/: test_main.py
