[metadata]
name = gkk-backend-graphql
description = gkk backend in graphql
author = Rutvik Patel
# license = 
# license_file = 
platforms = unix, linux, osx
classifiers = 
    Programming Language :: Python :: 3.10

[options]
packages = 
    app
# install_requires =
    # 
python_requires = >=3.10
zip_safe = false
