[metadata]
name = gkk-backend-graphql
version = 0.0.1
author = Rutvik Patel
author_email = rutvik503@gmail.com
description = gkk backend in graphql
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rut503/gkk-backend-graphql
project_urls =
    Bug Tracker = https://github.com/rut503/gkk-backend-graphql/issues
classifiers =
    Programming Language :: Python :: 3
    # License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = 
    app
# install_requires =
    # 
python_requires = >=3.10
zip_safe = false
